# pgheat

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: package.yml  publish.yml
docs/: architecture.md  development.md  metrics.md  product.md  releasing.md  roadmap.md
docs/decisions/: 0001-external-collector-first.md  0002-python-implementation.md
src/pgheat/: __init__.py  __main__.py  analysis.py  cli.py  collector.py  doctor.py  errors.py  models.py  store.py
tests/: __init__.py  helpers.py  test_analysis.py  test_cli.py  test_store.py
tests/fixtures/: workload.sql
