[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "pgheat"
version = "0.1.0"
description = "Explainable PostgreSQL partition temperature classification"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Himanshu Dhawale" }
]
keywords = [
  "postgresql",
  "observability",
  "partitioning",
  "monitoring",
  "database-performance"
]
dependencies = [
  "psycopg[binary]>=3.2,<4"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: System :: Monitoring"
]

[project.urls]
Homepage = "https://github.com/himanshudhawale/pgheat"
Documentation = "https://github.com/himanshudhawale/pgheat/tree/main/docs"
Issues = "https://github.com/himanshudhawale/pgheat/issues"
Source = "https://github.com/himanshudhawale/pgheat"

[project.scripts]
pgheat = "pgheat.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
